# ndav-svn

nd-0.8.2/: COPYING  ChangeLog  README  README.ja  auth.c  nd.1
stam/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  auth.c  config.h.in  configure  configure.in  main.c  nd.c  ndav.1  ndav.c  ndav.h
stam/xml/: Makefile  handbok.xml
trunk/: AUTHORS  BUGS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  auth.c  config.h.in  configure  configure.ac  configure.in  main.c  mkinstalldirs  ndav.1  ndav.c  ndav.h  ndav.sv.1
trunk/xml/: Makefile  Makefile.am  handbok-xhtml.xsl  handbok.in.xml  handbok.mk.in  handbok.xml  handbok.xsl  ndav.css
